--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,18 @@
 body{
  background-color: white;   
 }
+.button {
+    background-color: #00C8FF; /* Green */
+    border: none;
+    border-radius: 10px;
+    color: white;
+    padding: 15px 32px;
+    
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
 *{
     font-family: 'Noto Sans KR', sans-serif;
 }
