--- a/css/qna.css
+++ b/css/qna.css
@@ -26,13 +26,13 @@
     border-radius: 10px;
     font-size: 90%;
     display: block;
-    width: 90%;
+    width: 330px;
     border: 0px;
-    font-weight: 200;
+    font-weight: 300;
     align-items: center;
     
     margin: 0 auto;
-    padding: 20px;
+    padding: 17px;
    
     
 }
