--- a/css/result.css
+++ b/css/result.css
@@ -1,27 +1,26 @@
 #result{
-   display: none;
-   margin : 100;
-   padding: 0 auto;
+  display: none;
+  text-align: center;
+  border-radius: 20px;
 }
+
 .resultname{
     font-size: 17px;
     font-weight: 500;
     color : #00C8FF;
-    justify-content: center;
+   
   }
   
   .resultDesc{
-    width: 300px;
+   
     font-size: 14px;
     font-weight: 300;
     line-height: 30px;
-    text-align: start;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    
+   
   }
   .divider{
-      width: 300px;
+
       color: black;
   }
   
@@ -29,12 +28,13 @@
     color: white;
     background-color: #FEE500;
     font-size: 15px;
+    width: 300px;
     border: 0px;
     border-radius: 5px;
   }
   
   .kakao:hover, .kakao:focus {
-    background-color: whitesmoke;
+    background-color: white;
     color: #FEE500;
   }
   
