--- a/css/default.css
+++ b/css/default.css
@@ -13,6 +13,8 @@ body{
     text-align: center;
     text-decoration: none;
     display: inline-block;
+    width: 330px;
+    margin: 0 auto;
    
 }
 *{
