--- a/css/qna.css
+++ b/css/qna.css
@@ -26,7 +26,7 @@
     border-radius: 10px;
     font-size: 90%;
     display: block;
-    width: 330px;
+    width: 100%;
     border: 0px;
     font-weight: 300;
     align-items: center;
