--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,10 @@
 body{
  background-color: white;  
- 
+ margin: auto;
+ max-width: 600px;
+ text-align: center;
+ font-size: 15px;
+ font-family: 'Noto Sans KR', sans-serif;
 }
 
 .button {
@@ -9,14 +13,20 @@ body{
     border-radius: 10px;
     color: white;
     padding: 15px;
-    font-size: 90%;
+    font-size: 14px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    width: 330px;
-    margin: 0 auto;
-   
 }
-*{
-    font-family: 'Noto Sans KR', sans-serif;
+
+.hellocock {
+    background-color: white;
+    border: none;
+    border-radius: 10px;
+    color: #00C8FF;
+    padding: 15px;
+    font-size: 14px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
 }
