--- a/css/qna.css
+++ b/css/qna.css
@@ -1,28 +1,32 @@
-#qna{
+#qna {
     display: none;
-    
-}
-.status{
-    height: 2px;
-    width: 100%;
-    background-color:white;
-    
-    
-}
-.statusBar{
-    height: 100%;
-    background-color: #00C8FF;
-   
 }
 
-.qBox{
+header {
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+}
+
+.status {
+    height: 2px;
+    width: 100%;
+    background-color: white;
+}
+
+.statusBar {
+    height: 100%;
+    background-color: #00C8FF;
+}
+
+.qBox {
     text-align: center;
     font-size: 100%;
     font-weight: 500;
-    
 }
-.answerList{
-    background-color:#e6e8ee94;
+
+.answerList {
+    background-color: #e6e8ee94;
     border-radius: 10px;
     font-size: 90%;
     display: block;
@@ -30,19 +34,18 @@
     border: 0px;
     font-weight: 300;
     align-items: center;
-    
     margin: 0 auto;
     padding: 17px;
-   
-    
 }
-.answerList:hover, .answerList:focus{
+
+.answerList:hover,
+.answerList:focus {
     background-color: #00C8FF;
-    color:white;
+    color: white;
 }
-.tmi{
+
+.tmi {
     font-size: small;
     font-weight: 300;
     text-align: center;
-    
 }
