--- a/css/result.css
+++ b/css/result.css
@@ -48,7 +48,6 @@
 .kakao {
     background-color: #FEE500;
     border: none;
-    border-radius: 10px;
     color: white;
     padding: 15px;
     font-size: 90%;
@@ -82,4 +81,12 @@
 .gohome:focus {
     background-color: whitesmoke;
     color: #00C8FF;
+}
+
+footer {
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    color: white;
 }
