add cocktail compatibility

--- a/css/result.css
+++ b/css/result.css
@@ -39,7 +39,7 @@
     text-align: center;
 }
 
-.compatibility_item {
+.item {
     display: inline-block;
     text-align: center;
     margin: 0 auto;
