--- a/css/result.css
+++ b/css/result.css
@@ -1,105 +1,106 @@
-#result {
-    display: none;
-    text-align: center;
-    border-radius: 20px;
-}
-
-#shareResult {
-    max-width: 600px;
-    text-align: center;
-    border-radius: 20px;
-}
-
-.resultname {
-    font-size: 22px;
-    font-weight: 600;
-    color: #00C8FF;
-}
-
-.resulttag {
-    font-size: 15px;
-    font-weight: 500;
-    color: black;
-    opacity: 50%;
-}
-
-.resultDesc {
-    padding: 20px;
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 25px;
-    background-color: whitesmoke;
-    border-radius: 10px;
-}
-
-.compatibility {
-    font-weight: 400;
-    color: #00C8FF;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.item {
-    display: inline-block;
-    text-align: center;
-    margin: 0 auto;
-}
-
-.kakao {
-    background-color: #FEE500;
-    border: none;
-    color: white;
-    padding: 15px;
-    font-size: 90%;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    width: 100%;
-}
-
-.kakao:hover,
-.kakao:focus {
-    background-color: whitesmoke;
-    color: #FEE500;
-}
-
-.retest {
-    background-color: #FF2D55;
-    border: none;
-    border-radius: 10px;
-    color: white;
-    padding: 15px;
-    font-size: 90%;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    width: 100%;
-}
-
-.gohome {
-    color: white;
-    background-color: #00C8FF;
-    border: none;
-    border-radius: 10px;
-    color: white;
-    padding: 15px;
-    font-size: 15px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    width: 100%;
-}
-
-.gohome:hover,
-.gohome:focus {
-    background-color: whitesmoke;
-    color: #00C8FF;
-}
-
-footer {
-    position: fixed;
-    left: 0px;
-    bottom: 0px;
-    width: 100%;
-    color: white;
-}
+    #result {
+        display: none;
+        text-align: center;
+        border-radius: 20px;
+    }
+    
+    #shareResult {
+        max-width: 600px;
+        text-align: center;
+        border-radius: 20px;
+    }
+    
+    .resultname {
+        font-size: 22px;
+        font-weight: 600;
+        color: #00C8FF;
+    }
+    
+    .resulttag {
+        font-size: 15px;
+        font-weight: 500;
+        color: black;
+        opacity: 50%;
+    }
+    
+    .resultDesc {
+        padding: 20px;
+        font-size: 14px;
+        font-weight: 300;
+        line-height: 25px;
+        background-color: whitesmoke;
+        border-radius: 10px;
+    }
+    
+    .compatibility {
+        font-weight: 400;
+        color: #00C8FF;
+        margin: 0 auto;
+        text-align: center;
+    }
+    
+    .item {
+        display: inline-block;
+        text-align: center;
+        margin: 0 auto;
+    }
+    
+    .kakao {
+        margin: 50;
+        background-color: #FEE500;
+        border: none;
+        color: white;
+        padding: 15px;
+        font-size: 90%;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        width: 100%;
+    }
+    
+    .kakao:hover,
+    .kakao:focus {
+        background-color: whitesmoke;
+        color: #FEE500;
+    }
+    
+    .retest {
+        background-color: #FF2D55;
+        border: none;
+        border-radius: 10px;
+        color: white;
+        padding: 15px;
+        font-size: 90%;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        width: 100%;
+    }
+    
+    .gohome {
+        color: white;
+        background-color: #00C8FF;
+        border: none;
+        border-radius: 10px;
+        color: white;
+        padding: 15px;
+        font-size: 15px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        width: 100%;
+    }
+    
+    .gohome:hover,
+    .gohome:focus {
+        background-color: whitesmoke;
+        color: #00C8FF;
+    }
+    
+    footer {
+        position: fixed;
+        left: 0px;
+        bottom: 0px;
+        width: 100%;
+        color: white;
+    }
