--- a/css/result.css
+++ b/css/result.css
@@ -65,16 +65,17 @@
     }
     
     .retest {
-        background-color: #FF2D55;
+        background-color: white;
         border: none;
         border-radius: 10px;
-        color: white;
+        color: #00C8FF;
         padding: 15px;
         font-size: 90%;
         text-align: center;
         text-decoration: none;
         display: inline-block;
         width: 100%;
+        margin-bottom: 70px;
     }
     
     .gohome {
