--- a/css/qna.css
+++ b/css/qna.css
@@ -21,14 +21,14 @@ header {
 
 .qBox {
     text-align: center;
-    font-size: 100%;
+    font-size: 15px;
     font-weight: 500;
 }
 
 .answerList {
     background-color: #e6e8ee94;
     border-radius: 10px;
-    font-size: 90%;
+    font-size: 13px;
     display: block;
     width: 100%;
     border: 0px;
@@ -45,7 +45,7 @@ header {
 }
 
 .tmi {
-    font-size: small;
+    font-size: 12px;
     font-weight: 300;
     text-align: center;
 }
