ga utm 추적 링크 삽입 & mbti 결과 내용 변경

--- a/css/result.css
+++ b/css/result.css
@@ -27,9 +27,9 @@
         padding: 20px;
         font-size: 14px;
         font-weight: 300;
-        line-height: 25px;
         background-color: whitesmoke;
         border-radius: 10px;
+        text-align: left;
     }
     
     .compatibility {
